# specflow

./: Cargo.toml  README.md
src/: main.rs
src/agent/: executor.rs  runner.rs
src/gastown/: client.rs  mod.rs  model.rs
src/spec/: gherkin.rs  mod.rs  writer.rs
src/sync/: engine.rs  mapping.rs  mod.rs
src/things/: applescript.rs  db.rs  mod.rs  model.rs
src/triage/: claude.rs  id_tracker.rs  mod.rs  processor.rs
src/tui/: app.rs  ui.rs
